[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boxes/BoxReceiver.gd" type="Script" id=1]
[ext_resource path="res://Items/gold_plaster_cube.tres" type="Material" id=2]
[ext_resource path="res://Items/white_plaster_cube.tres" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.733609, 0.431376, 0.714648 )

[node name="BoxReceiver" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00389, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0047282, -0.533636, 0 )
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
use_collision = true
height = 0.5
material = ExtResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="CSGBox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.359052, 0 )
operation = 2
width = 1.5
height = 1.1769
depth = 1.5
material = ExtResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
